# University1652-Baseline

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
docs/: report_notes.md
docs/requirement/: answer.txt  query_street_name.txt  requirement.md  requirement_ch.md
docs/research/state-of-the-art/: README.md
scripts/: check_challenge_data.py  demo.py  demo_4K.py  export_challenge_submission.py  test.py  test_160k.py  test_4K.py  test_ImageNet.py  test_Place365.py  test_cvusa.py  test_train.py  train.py  train_18_sample.py  train_1_sample.py  train_27_sample.py  train_3_sample.py  train_9_sample.py  train_cvusa.py  train_no_street.py
scripts/maintenance/: clear_model.py
src/university1652_baseline/: __init__.py  cli.py  data_interface.py  submission.py  utils.py
